# event-store-ctl

./: .gitignore  README.md  event-store-ctl.cabal
exe/: Main.hs  Streams.hs
tutorial/: send-event.md
